<resources>
    <string name="app_name">Finance Manager</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_categories">Categories</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_chart">Chart</string>

    <string name="accounts">Accounts</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>

    <string name="add">Add</string>
    <string name="select_date">Select date</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="apply">Apply</string>
    <string name="delete_alert_title">Do you really want to delete this account?</string>
    <string name="delete_alert_subtitle">All transactions from this account will also be deleted.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="account_actions">Account actions</string>
    <string name="editing">Editing</string>
    <string name="adding">Adding</string>

    <string name="year">Year</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="all_time">All time</string>
    <string name="from_account">From account</string>
    <string name="to_category">To category</string>
    <string name="expense">Expense</string>
    <string name="note">Note</string>
    <string name="select_an_account">Select an account</string>
    <string name="accounts_filter">Accounts filter</string>
    <string name="all_accounts">All accounts</string>
    <string name="color_filter">Color filter</string>
    <string name="selected_color">Selected color:</string>

    <string name="theme">Theme</string>
    <string name="default_currency">Default currency</string>
    <string name="settings">Settings</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="no_transaction">No transaction</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>