<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/transactions_fragment">

    <fragment
        android:id="@+id/accounts_fragment"
        android:name="com.example.financemanager.UI.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts">

        <action
            android:id="@+id/action_accounts_fragment_to_account_add_fragment"
            app:destination="@id/account_add_fragment" />

        <action
            android:id="@+id/action_accounts_fragment_to_account_actions_sheet_fragment"
            app:destination="@id/account_actions_sheet_fragment" />

    </fragment>

    <fragment
        android:id="@+id/transactions_fragment"
        android:name="com.example.financemanager.UI.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" >

        <action
            android:id="@+id/action_transactions_fragment_to_selectDateDialogFragment"
            app:destination="@id/select_date_dialog_fragment" />
        <action
            android:id="@+id/action_transactions_fragment_to_addTransactionSheetFragment"
            app:destination="@id/add_transaction_sheet_fragment" />

    </fragment>

    <fragment
        android:id="@+id/chart_fragment"
        android:name="com.example.financemanager.UI.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" >

        <action
            android:id="@+id/action_chart_fragment_to_selectDateDialogFragment"
            app:destination="@id/select_date_dialog_fragment" />

    </fragment>

    <dialog
        android:id="@+id/account_actions_sheet_fragment"
        android:name="com.example.financemanager.UI.accounts.actions.AccountActionsSheetFragment"
        android:label="@string/account_actions"
        tools:layout="@layout/fragment_account_actions_sheet">

        <action
            android:id="@+id/action_account_actions_sheet_fragment_to_accounts_fragment"
            app:destination="@id/accounts_fragment" />
        <argument
            android:name="selectedAccount"
            app:argType="com.example.financemanager.data.models.Account"/>
        <action
            android:id="@+id/action_account_actions_sheet_fragment_to_account_edit_fragment"
            app:destination="@id/account_edit_fragment"
            app:popUpTo="@id/accounts_fragment" />
    </dialog>

    <fragment
        android:id="@+id/account_edit_fragment"
        android:name="com.example.financemanager.UI.accounts.edit.AccountEditFragment"
        android:label="@string/editing"
        tools:layout="@layout/fragment_account_edit">

        <action
            android:id="@+id/action_account_edit_fragment_to_accounts_fragment"
            app:destination="@id/accounts_fragment" />
        <argument
            android:name="editableAccount"
            app:argType="com.example.financemanager.data.models.Account" />

        <action
            android:id="@+id/action_account_edit_fragment_to_colorPickerDialogFragment"
            app:destination="@id/colorPickerDialogFragment" />

    </fragment>

    <fragment
        android:id="@+id/account_add_fragment"
        android:name="com.example.financemanager.UI.accounts.add.AccountAddFragment"
        android:label="@string/adding"
        tools:layout="@layout/fragment_account_add">

        <action
            android:id="@+id/action_account_add_fragment_to_accounts_fragment"
            app:destination="@id/accounts_fragment" />

    </fragment>

</navigation>